--- a/css/responsive.css
+++ b/css/responsive.css
@@ -29,6 +29,7 @@
 @media (min-width: 992px) and (max-width: 1199px) {
   .col-md-4.portfolio-item{
     width: 33%;
+    text-align: center;
   }
 }
 
@@ -538,7 +539,7 @@
     padding: 12px 18px;
   }
 }
-
+  
 @media only screen and (max-width : 480px) {
 
   /* Pricing Table*/
