--- a/partials/header.html
+++ b/partials/header.html
@@ -24,7 +24,7 @@
                     </button>
 
                     <a class="navbar-brand" href="index.html">
-                        <h1><img src="images/logo.png" alt="logo"></h1>
+                        <h1><img src="/images/logo.png" alt="logo"></h1>
                     </a>
                     
                 </div>
@@ -33,7 +33,7 @@
                         <li><a href="index.html" class="active">Home</a></li>          
                         <li class="dropdown"><a href="portfolio.html">Portfolio Pages<i class="fa fa-angle-down"></i></a>
                             <ul role="menu" class="sub-menu">
-                                <li><a href="portfolio.html">Portfolio</a></li>
+                                <li><a href="/portfolio-pages/tutor-training.html">Tutor Training</a></li>
                                 <li><a href="portfoliofour.html">Isotope 3 Columns + Right Sidebar</a></li>
                                 <li><a href="portfolioone.html">3 Columns + Right Sidebar</a></li>
                                 <li><a href="portfoliotwo.html">3 Columns + Left Sidebar</a></li>
