--- a/partials/header.html
+++ b/partials/header.html
@@ -24,7 +24,7 @@
                     </button>
 
                     <a class="navbar-brand" href="../index.html">
-                        <h1><img src="../images/logo.png" alt="logo"></h1>
+                        <h1><img src="/images/logo.png" alt="logo"></h1>
                     </a>
                     
                 </div>
