--- a/partials/footer.html
+++ b/partials/footer.html
@@ -68,7 +68,7 @@
                 -->
                 <div class="col-sm-12">
                     <div class="copyright-text text-center">
-                        <p>&copy; Derek Thurber 2015. All Rights Reserved.</p>
+                        <p>&copy; Derek Thurber. All Rights Reserved.</p>
 <!--                        <p>Designed by <a target="_blank" href="http://www.themeum.com">Themeum</a></p>-->
                     </div>
                 </div>
