--- a/partials/header.html
+++ b/partials/header.html
@@ -26,7 +26,7 @@
 -->
 
                     <a class="navbar-brand" href="../">
-                        <h1><img src="logo.png" alt="logo"></h1>
+                        <h1><img src="../logo.png" alt="logo"></h1>
                     </a>
                     
                 </div>
