--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,10 +9,13 @@
     <title>Derek Thurber | Portfolio</title>
     <!--stylesheets-->
     <link rel="stylesheet" href="/css/normalize.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="/css/typeography.css">
     <link rel="stylesheet" href="/css/beaty.css">
     <link rel="stylesheet" href="/css/base.css">
     <!--javascript-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mixitup/2.1.11/jquery.mixitup.js"></script>
     <!--favicon start-->
     <link rel="shortcut icon" href="images/ico/favicon.ico">
     <link rel="apple-touch-icon-precomposed" sizes="144x144" href="images/ico/apple-touch-icon-144-precomposed.png">
