--- a/css/base.css
+++ b/css/base.css
@@ -2,6 +2,80 @@
     margin-top: 0;
 }
 
+.flex-container {
+    display: flex;
+    flex-direction: row;
+    margin: 20px 0;
+}
+
+.card {
+    width: 250px;
+    height: 300px;
+    background-color: #778899;
+    box-shadow: 2px 2px 7px 1px #999;
+    border-radius: 5px;
+    position: relative;
+    padding: 10px;
+}
+
+.card img {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+    position: absolute;
+    top: 0;
+    left: 0;
+    border-radius: 5px 5px 0 0;
+    margin-bottom: 10px;
+}
+
+.card .title {
+    position: absolute;
+    bottom: 120px;
+    left: 0;
+    padding: 10px 10px;
+    display: block;
+    width: 250px;
+    color: #fff;
+    background-color: rgba(100,100,100,0.8);
+    line-height: 1.2em!important;
+}
+
+.card .description {
+    color: #fff;
+    position: absolute;
+    top: 205px;
+    height: 70px;
+    /*background-color: #fff;*/
+    padding-right: 10px
+}
+
+.card .description p {
+    font-size: 0.8em;
+    line-height: 1em;
+    margin: 0;
+}
+
+.card .category {
+    font-size: 0.5em!important;
+    line-height: 1.7rem!important;
+    text-transform: uppercase;
+}
+
+.card .link {
+    position: absolute;
+    bottom: 0;
+    width: 290px;
+    padding: 5px 0;
+    border-top: 1px solid #fff;
+    color: #21B5D3;
+}
+
+.card .link p {
+    margin: 0;
+    font-size: 0.8em;
+}
+
 .center {
     text-align: center;
 }
@@ -19,7 +93,7 @@
 }
 
 .nav-horizontal {
-    margin: 10px 0;
+    margin: 20px 0;
 }
 
 .nav-horizontal ul {
