--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,12 +10,11 @@
     <!--stylesheets-->
     <link rel="stylesheet" href="/css/normalize.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="/css/typeography.css">
     <link rel="stylesheet" href="/css/beaty.css">
     <link rel="stylesheet" href="/css/base.css">
     <!--javascript-->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/mixitup/2.1.11/jquery.mixitup.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/jquery.mixitup/latest/jquery.mixitup.min.js"></script>
     <!--favicon start-->
     <link rel="shortcut icon" href="images/ico/favicon.ico">
     <link rel="apple-touch-icon-precomposed" sizes="144x144" href="images/ico/apple-touch-icon-144-precomposed.png">
@@ -37,5 +36,6 @@
 </head><!--/head-->
 <body>
     {{ page.content }}
+	<script src="/js/main.js"></script>
 </body>
 </html>
