--- a/css/base.css
+++ b/css/base.css
@@ -5,61 +5,61 @@
 .flex-container {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     margin: 20px 0;
 }
 
 .card {
-    width: 250px;
-    height: 300px;
-    background-color: #778899;
-    box-shadow: 2px 2px 7px 1px #999;
-    border-radius: 5px;
+    width: 230px;
+    height: 230px;
+    /*background-color: #778899;*/
+    box-shadow: 1px 1px 5px 1px #ccc;
+    /*border-radius: 5px;*/
     position: relative;
     padding: 10px;
+    margin: 10px 20px 10px 0;
 }
 
 .card img {
-    width: 100%;
-    height: 200px;
-    object-fit: cover;
+    width: 250px;
+    height: 150px;
+    /*object-fit: cover;*/
     position: absolute;
     top: 0;
     left: 0;
-    border-radius: 5px 5px 0 0;
+    /*border-radius: 5px 5px 0 0;*/
     margin-bottom: 10px;
 }
 
-.card .title {
-    position: absolute;
-    bottom: 120px;
-    left: 0;
-    padding: 10px 10px;
-    display: block;
-    width: 250px;
-    color: #fff;
-    background-color: rgba(100,100,100,0.8);
-    line-height: 1.2em!important;
-}
-
 .card .description {
-    color: #fff;
+    color: #333;
     position: absolute;
-    top: 205px;
-    height: 70px;
-    /*background-color: #fff;*/
-    padding-right: 10px
+    top: 150px;
+    padding-right: 10px;
 }
 
-.card .description p {
-    font-size: 0.8em;
-    line-height: 1em;
-    margin: 0;
+.card .description h4 {
+    font-weight: 600;
 }
 
 .card .category {
     font-size: 0.5em!important;
     line-height: 1.7rem!important;
     text-transform: uppercase;
+    position: absolute;
+    bottom: -5px;
+    right: 10px;
+    color: #aaa;
+}
+
+.card .year {
+    font-size: 0.5em!important;
+    line-height: 1.7rem!important;
+    text-transform: uppercase;
+    position: absolute;
+    bottom: -5px;
+    left: 10px;
+    color: #1FA9C4;
 }
 
 .card .link {
@@ -74,6 +74,10 @@
 .card .link p {
     margin: 0;
     font-size: 0.8em;
+}
+
+#Container .mix{
+	display: none;
 }
 
 .center {
@@ -105,8 +109,57 @@
 .nav-horizontal li {
     display: inline-block;
     margin: 5px 10px;
+    padding: 5px 0;
+    text-transform: uppercase;
+    font-size: 0.8em;
 }
 
-.nav-horizontal a {
-    padding: 5px 10px;
+.nav-horizontal li:hover {
+    cursor: pointer;
+    color: #666;
+}
+
+.nav-horizontal li.active {
+    border-bottom: 4px solid #1FA9C4;
+}
+
+.nav-pills {
+    /*width: 90%;*/
+    /*margin: 0 auto;*/
+    text-align: center;
+    padding: 0!important;
+    margin-top: -10px;
+}
+
+.nav-pills li a {
+  display: inline-block;
+  color: #aaa;
+  border: 1px solid #aaa;
+  width: 18px;
+  height: 18px;
+  /*line-height: 40px;*/
+  text-align: center;
+  padding: 8px;
+  border-radius: 50%;
+  -webkit-transition: all 0.9s ease;
+  transition: all 0.9s ease;
+  font-size: 1.2em;
+}
+
+.nav-pills li a:hover {
+  color: #1FA9C4;
+  border-color: #1FA9C4;
+}
+
+.circle {
+    border-radius: 50%;
+}
+
+.profile-pic {
+    width: 100px;
+    height: 100px;
+    text-align: center;
+    box-shadow: 1px 1px 3px 1px #999;
+    margin: 0 auto;
+    display: block;
 }
