updated anchor effect style

--- a/css/style.css
+++ b/css/style.css
@@ -22,13 +22,17 @@ a,a:hover {
   color: #85CC98;
   text-decoration: none;
   position:relative;
-  transition:0.5s color ease;
+  transition:0.5s ease;
 }
 a:hover {
     color: #fff;
 }
+a.line {
+  color:#fff;
+  border-bottom: 1px solid #85CC98;
+}
 a.line:hover {
-  text-decoration: underline;
+  background-color: #85CC98;
 }
 
 strong {
