--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ body {
 }
 
 a,a:hover {
-  color: #85CC98;
+  color: #00959E;
   text-decoration: none;
   position:relative;
   transition:0.5s ease;
@@ -29,10 +29,10 @@ a:hover {
 }
 a.line {
   color:#fff;
-  border-bottom: 2px solid #85CC98;
+  border-bottom: 2px solid #00959E;
 }
 a.line:hover {
-  background-color: #85CC98;
+  background-color: #00959E;
 }
 
 strong {
@@ -50,7 +50,7 @@ General Style
   width: 100%;
   /* vertically align its content */
   display: table;
-  background: url('../img/bg-9-full.jpg') center center;
+  background: url('../img/2233.svg') center center;
   background-size: cover;
   overflow: hidden;
 }
@@ -59,22 +59,23 @@ General Style
   /* vertically align inside its parent */
   display: table-cell;
   vertical-align: middle;
-  text-align: center;
+  text-align: left;
   padding: 0 5%;
 /*  background: #2C6A79;*/
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 .cd-intro-content h1 {
-  font-size: 4.4rem;
-  color: #fff;
+  font-size: 6.5rem;
+  color: #333;
+  margin-top: -100px;
 }
 .cd-intro-content p {
-  font-size: 1.7rem;
-  font-weight: 700;
+  font-size: 2.1rem;
+  font-weight: 100;
   line-height: 1.4;
   margin: 1em 0;
-  color: #ccc;
+  color: #666;
 }
 .cd-intro-content .action-wrapper {
   display: inline-block;
@@ -89,12 +90,15 @@ General Style
 }
 @media only screen and (min-width: 768px) {
   .cd-intro-content h1 {
-    font-size: 7.2rem;
+    font-size: 9.2rem;
     font-weight: 300;
   }
   .cd-intro-content p {
-    font-size: 2.1rem;
+    font-size: 2.5rem;
     margin: 1em 0 1.3em;
+  }
+  .cd-intro-content {
+    padding: 0 10%;
   }
 }
 
@@ -102,11 +106,11 @@ General Style
   display: inline-block;
   padding: 1.2em 1.4em;
   font-size: 1.3rem;
-  color: #ffffff;
+  color: #202e4a;
   text-transform: uppercase;
   font-weight: bold;
   letter-spacing: 1px;
-  background-color: #202e4a;
+  border: 1px solid #202e4a;
   border-radius: .25em;
   margin-right: 1.5em;
 }
@@ -114,7 +118,15 @@ General Style
   margin-right: 0;
 }
 .cd-btn.main-action {
-  background-color: #85CC98;
+  border-color: #00959E;
+  color: #00959E;
+}
+.cd-btn:hover {
+  color: #fff;
+  background-color: #202e4a;
+}
+.cd-btn.main-action:hover {
+  background-color: #00959E;
 }
 @media only screen and (min-width: 480px) {
   .cd-btn {
@@ -378,7 +390,7 @@ Rotating headline
 .cd-headline {
   font-size: 3rem;
   line-height: 1.2;
-  text-align: center;
+  text-align: left;
 }
 @media only screen and (min-width: 768px) {
   .cd-headline {
@@ -601,24 +613,34 @@ social icons
 -------------------------------- */
 .social {
     position: absolute;
-    bottom: 5%;
+    bottom: -10px;
     width: 90%;
     left: 50%;
     margin-left: -45%;
-    text-align:center;
+    text-align:right;
 }
 .social ul {
     list-style-type: none;
 }
 .social ul li {
     display: inline-block;
-    margin: 0 10px;
+    margin: 0 3px;
+  background-color: #202e4a;
+  background-color: rgba(32,46,74,0.7);
+  transition-duration: 0.2s;
 }
 .social a {
-    color: #202e4a;
+    color: #fff;
+  font-size: 1.5rem;
+  display: block;
+  padding: 8px 8px 30px 8px;
 }
 .social a:hover {
     color: #fff;
+}
+.social li:hover {
+  -webkit-transform: translatey(-10px);
+  transition-duration: 0.5s;
 }
 /* -------------------------------- 
 
